--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	    <div class="col-md-4">
 	      <div class="example-item">
 	        <a href="projects/明牌誓言机/index.html">
-	        <img src="images/07.pngg" width="100%">
+	        <img src="images/07.png" width="100%">
 	        </a>
 	        <div class="item-info">
 	          <h4><a href="projects/明牌誓言机/index.html">明牌活动</a></h4>
@@ -194,7 +194,7 @@
 	    <div class="col-md-4">
 	      <div class="example-item">
 	        <a href="http://www.hydeze.com/qyc/">
-	        <img src="images/bg.jpg" width="100%">
+	        <img src="images/bg3.jpg" width="100%">
 	        </a>
 	        <div class="item-info">
 	          <h4><a href="http://www.hydeze.com/qyc/">请用茶</a></h4>
